run_spec(__dirname, ["markdown"]);
run_spec(__dirname, ["markdown"], { embeddedLanguageFormatting: "off" });
