// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test.md - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
\`\`\`js
1 +  2
\`\`\`

=====================================output=====================================
\`\`\`js
1 +  2
\`\`\`

================================================================================
`;

exports[`test.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
\`\`\`js
1 +  2
\`\`\`

=====================================output=====================================
\`\`\`js
1 + 2;
\`\`\`

================================================================================
`;
